Added swagger to servic
